Fix sticky spacing

--- a/_sticky_bar.scss
+++ b/_sticky_bar.scss
@@ -6,7 +6,7 @@
     position: absolute;
     z-index: 3;
     background: $dark-blue;
-    top: 191px; 
+    top: 181px; 
     left: 5px;
     right: 0px;
     font-size: 14px;
